check next time

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-.wrap {
+.box {
     display: flex;
     justify-content: space-between;
     width: 500px;
     margin: 0 auto;
+}
+
+.question {
+    cursor: pointer;
 }
